--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -28,12 +29,18 @@
     "react-redux": "^8.0.7",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "uuidv4": "^6.2.13"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.2",
+    "@types/uuid": "^9.0.1",
+    "babel-jest": "^29.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0"
+    "jest-environment-jsdom": "^29.5.0",
+    "next-router-mock": "^0.9.3",
+    "ts-jest": "^29.1.0"
   }
 }
