--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.2",
     "@types/uuid": "^9.0.1",
     "babel-jest": "^29.5.0",
@@ -41,6 +42,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "next-router-mock": "^0.9.3",
+    "node-mocks-http": "^1.12.2",
     "ts-jest": "^29.1.0"
   }
 }
